# matched-data-cli

./: Cargo.toml  LICENSE  README.md
.github/workflows/: lint.yml  release.yml  semgrep.yml  test.yml
matched_data/: Cargo.toml
matched_data/src/: lib.rs
matched_data_wasm/: Cargo.toml  README.md
matched_data_wasm/src/: lib.rs
src/: main.rs  matched_data.rs  matched_data_legacy.rs
