[package]
name = "matched-data-cli"
version = "0.4.0"
authors = ["Miguel de Moura <mdemoura@cloudflare.com>"]
description = "Tool to interact with the firewall matched data feature"
edition = "2018"

[dependencies]
assert_cmd = "2.0.0"
bincode = "1.3.1"
clap = "3.0.0-beta.4"
generic-array = { version = "0.14.4", features = ["serde"] }
hpke = { version = "0.6.0", default-features = false, features = [
    "x25519",
    "serde_impls",
] }
radix64 = "0.6.2"
rand = "0.8.3"
serde = { version = "1.0.117", features = ["derive"] }
serde_json = "1.0.59"

[profile.release]
lto = true
