[package]
name = "matched-data-cli"
version = "0.6.0"
authors = ["Miguel de Moura <mdemoura@cloudflare.com>"]
description = "Tool to interact with the firewall matched data feature"
edition = "2021"

[dependencies]
bincode = "1.3.3"
clap = { version = "3.0.0", features = ["derive"] }
hpke = { version = "0.8.0", default-features = false, features = [
    "x25519",
    "serde_impls",
] }
radix64 = "0.6.2"
rand = "0.8.4"
serde = { version = "1.0.130", features = ["derive"] }
serde_json = "1.0.68"

[dev-dependencies]
assert_cmd = "2.0.2"
assert_fs = "1.0.6"

[profile.release]
lto = true
