[package]
name = "matched_data"
version = "0.2.0"
authors = ["Miguel de Moura <mdemoura@cloudflare.com>"]
description = "Library to handle firewall matched data encryption"
edition = "2018"

[dependencies]
bincode = "1.3.1"
hpke = { version = "0.4.1", features = ["serde_impls"] }
generic-array = { version = "0.14.4", features = ["serde"] }
radix64 = "0.6.2"
rand = "0.7.3"
serde = { version = "1.0.117", features = ["derive"] }
serde_json = "1.0.59"
