[package]
name = "matched_data_wasm"
version = "0.2.0"
authors = ["Alvis Duong <alvis@cloudflare.com>"]
description = "WebAssembly bindings for matched_data"
edition = "2018"
repository = "https://github.com/cloudflare/matched-data-cli"

[dependencies]
bincode = "1.3.1"
generic-array = { version = "0.14.4", features = ["serde"] }
hpke = { version = "0.4.1", features = ["serde_impls"] }
matched_data = { path = "../matched_data" }
radix64 = "0.6.2"
rand = { version = "0.7.3", features = ["stdweb", "wasm-bindgen"] }
serde = { version = "1.0.117", features = ["derive"] }
serde_json = "1.0.59"
wasm-bindgen = { version = "0.2", features = ["serde-serialize"] }

[lib]
crate-type = ["cdylib"]

[package.metadata.wasm-pack.profile.release]
wasm-opt = ["-Os", "--enable-mutable-globals"]
